--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "Natively",
   "version": "1.0.0",
@@ -28,6 +27,7 @@
     "@types/difflib": "^0.2.7",
     "difflib": "^0.2.4",
     "eas": "^0.1.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "expo": "~54.0.1",
     "expo-blur": "^15.0.6",
     "expo-camera": "^17.0.9",
